--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "content-creators",
   "version": "1.0.0",
-  "description": "",
+  "description": "## Project Overview",
   "scripts": {
     "test": "mocha"
   },
@@ -10,5 +10,143 @@
   "devDependencies": {
     "chai": "^4.1.1",
     "mocha": "^6.1.3"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "ansi-colors": "^3.2.3",
+    "ansi-regex": "^3.0.1",
+    "ansi-styles": "^3.2.1",
+    "argparse": "^1.0.10",
+    "array-buffer-byte-length": "^1.0.0",
+    "array.prototype.reduce": "^1.0.6",
+    "arraybuffer.prototype.slice": "^1.0.2",
+    "assertion-error": "^1.1.0",
+    "available-typed-arrays": "^1.0.5",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "browser-stdout": "^1.3.1",
+    "call-bind": "^1.0.2",
+    "camelcase": "^5.3.1",
+    "chalk": "^2.4.2",
+    "check-error": "^1.0.2",
+    "cliui": "^5.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "concat-map": "^0.0.1",
+    "debug": "^3.2.6",
+    "decamelize": "^1.2.0",
+    "deep-eql": "^4.1.3",
+    "define-data-property": "^1.1.0",
+    "define-properties": "^1.2.1",
+    "diff": "^3.5.0",
+    "emoji-regex": "^7.0.3",
+    "es-abstract": "^1.22.2",
+    "es-array-method-boxes-properly": "^1.0.0",
+    "es-set-tostringtag": "^2.0.1",
+    "es-to-primitive": "^1.2.1",
+    "escape-string-regexp": "^1.0.5",
+    "esprima": "^4.0.1",
+    "find-up": "^3.0.0",
+    "flat": "^4.1.1",
+    "for-each": "^0.3.3",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.0",
+    "get-intrinsic": "^1.2.1",
+    "get-symbol-description": "^1.0.0",
+    "glob": "^7.1.3",
+    "globalthis": "^1.0.3",
+    "gopd": "^1.0.1",
+    "growl": "^1.10.5",
+    "has": "^1.0.3",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^3.0.0",
+    "has-property-descriptors": "^1.0.0",
+    "has-proto": "^1.0.1",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.0",
+    "he": "^1.2.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.5",
+    "is-array-buffer": "^3.0.2",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-buffer": "^2.0.5",
+    "is-callable": "^1.2.7",
+    "is-date-object": "^1.0.5",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-negative-zero": "^2.0.2",
+    "is-number-object": "^1.0.7",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.2",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.12",
+    "is-weakref": "^1.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "js-yaml": "^3.13.1",
+    "locate-path": "^3.0.0",
+    "lodash": "^4.17.21",
+    "log-symbols": "^2.2.0",
+    "loupe": "^2.3.6",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.4",
+    "ms": "^2.1.1",
+    "node-environment-flags": "^1.0.5",
+    "object-inspect": "^1.12.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.0",
+    "object.getownpropertydescriptors": "^2.1.7",
+    "once": "^1.4.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^3.0.0",
+    "p-try": "^2.2.0",
+    "path-exists": "^3.0.0",
+    "path-is-absolute": "^1.0.1",
+    "pathval": "^1.1.1",
+    "regexp.prototype.flags": "^1.5.1",
+    "require-directory": "^2.1.1",
+    "require-main-filename": "^2.0.0",
+    "safe-array-concat": "^1.0.1",
+    "safe-regex-test": "^1.0.0",
+    "semver": "^5.7.2",
+    "set-blocking": "^2.0.0",
+    "set-function-name": "^2.0.1",
+    "side-channel": "^1.0.4",
+    "sprintf-js": "^1.0.3",
+    "string-width": "^2.1.1",
+    "string.prototype.trim": "^1.2.8",
+    "string.prototype.trimend": "^1.0.7",
+    "string.prototype.trimstart": "^1.0.7",
+    "strip-ansi": "^4.0.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^6.0.0",
+    "type-detect": "^4.0.8",
+    "typed-array-buffer": "^1.0.0",
+    "typed-array-byte-length": "^1.0.0",
+    "typed-array-byte-offset": "^1.0.0",
+    "typed-array-length": "^1.0.4",
+    "unbox-primitive": "^1.0.2",
+    "which": "^1.3.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-module": "^2.0.1",
+    "which-typed-array": "^1.1.11",
+    "wide-align": "^1.1.3",
+    "wrap-ansi": "^5.1.0",
+    "wrappy": "^1.0.2",
+    "y18n": "^4.0.3",
+    "yargs": "^13.3.2",
+    "yargs-parser": "^13.1.2",
+    "yargs-unparser": "^1.6.0"
+  },
+  "keywords": []
 }
